kuber-homeworks_1.4/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxandmulti
  template:
    metadata:
      labels:
        app: nginxandmulti
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: multi
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080
