kuber-homeworks_1.4/multiback.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiback
spec:
  #  replicas: 3
  selector:
    matchLabels:
      app: multiback
  template:
    metadata:
      labels:
        app: multiback
    spec:
      containers:
        - name: multi
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080
