kuber-homeworks_1.4/nginxfront.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxfront
spec:
  # replicas: 6
  selector:
    matchLabels:
      app: nginxfront
  template:
    metadata:
      labels:
        app: nginxfront
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
