kuber-homeworks_1.4/serviceback.yml
apiVersion: v1
kind: Service
metadata:
  name: servicemulti
spec:
  selector:
    app: multiback
  ports:
    - name: multi
      protocol: TCP
      port: 9002
      targetPort: 8080
