kuber-homeworks_1.4/servicefront.yml
apiVersion: v1
kind: Service
metadata:
  name: servicenginx
spec:
  selector:
    app: nginxfront
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
