kuber-homeworks_1.4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicenginx
                port:
                  number: 9001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: servicemulti
                port:
                  number: 9002
